# rlberry-farms

./: .gitignore  .gitlab-ci.yml  README.md  farmscool  farmscool.sh  farmscool_challenger  farmscool_challenger.sh  ppo_farm0.py  pyproject.toml  run_experiment.py  setup.py
challenge/: .egg.txt  add_xp_to_queue.py  advanced_info.py  challenge.def  farmscool  farmscool_challenger  farmscool_internal  get_time.py  launch_server.sh  print_leaderboard.py  rq_worker.py  run_experiment.py  stop_job.py
challenge/experiments_description/: .#params_experiment.yaml  farm0.yaml  params_experiment.yaml  ppo.yaml  sb3_ppo.py  sb3_ppo.yaml
docs/: .#requirements.txt  api.rst  challenge.rst  conf.py  index.rst  installation.rst  requirements.txt  user_guide.rst
docs/_build/doctrees/: api.doctree  index.doctree  installation.doctree  (+1 more)
examples/: Farm_Creation.ipynb  expert_farm0.py  expert_farm1.py  installation_test.py  interactive_farm0.py  interactive_farm1.py  notebook_AgentExpert.ipynb  plot_farm0.py  ppo_farm0.py  ppo_farm1.py  random_farm0.py  random_farm1.py
examples/experiments_description/: farm0.yaml  ppo.yaml  sb3_ppo.py  sb3_ppo.yaml
public/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  user_guide.html
rlberry_farms/: __init__.py  game0_env.py  game1_env.py  utils.py
rlberry_farms/farm0/: farm.py
rlberry_farms/farm1/: farm.py  farm_actions.yaml  farm_init.yaml  farm_score.yaml
rlberry_farms/tests/: test_farms.py
rlberry_rq/: __init__.py
scripts/: add_xp_to_queue.py  launch_server.sh
(+32 files in other folders)
