[tool.poetry]
name = "rlberry-farms"
version = "0.0.1"
description = "Some farms for rlberry."
authors = ["rlberry team"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
rq = "^1.11.0"
rlberry = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
