[tool.poetry]
name = "rlberry-farms"
version = "0.0.1"
description = "Some farms for rlberry."
authors = ["rlberry team"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
rlberry = "^0.3.0"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
